--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
     <!-- aframe -->
     <script src="https://aframe.io/releases/1.0.3/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-environment-component/dist/aframe-environment-component.min.js"></script>
-    <a-scene
-      inspector="url: https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js"
-    ></a-scene>
 
     <title>WideSpread</title>
   </head>
   <body>
-    <a-scene>
+    <a-scene
+      inspector="url: https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js"
+    >
       <a-entity
         geometry="primitive: sphere; radius: 0.25"
         light="type: point; color: white; intensity: 8"
@@ -41,9 +40,64 @@
       <a-box
         color="lightskyblue"
         position="0 1 -5"
-        scale="4 4 0.15"
+        scale="8 4 0.05"
         opacity="0.3"
+        material="shader: gradientshader; side: double; blending: additive; topColor: #11b6df; bottomColor: #1f4b87"
+        geometry=""
+        text__ws_landing="align: center; alphaTest: 1.43; color: #0ba9dd; height: 3.99; lineHeight: 1.51; side: double; transparent: false; value: WideSpread; width: 1.65"
+        id="ws_landing"
       >
+        <a-entity
+          value="WideSpread"
+          color="white"
+          scale="3 2 1"
+          opacity="0.8"
+        ></a-entity>
+      </a-box>
+
+      <!-- mainContacts -->
+      <a-box
+        color="black"
+        position="6.50052 1 -3.76483"
+        scale="4 2.01253 0.15"
+        rotation="0 135.99439746327653 90.00021045914971"
+        opacity="0.5"
+        material="alphaTest: 0.29"
+        geometry=""
+        id="mainContacts"
+      ></a-box>
+      <!-- mainContacts Header -->
+      <a-box
+        color="black"
+        position="6.50052 4 -3.76483"
+        scale="1 2.01253 0.15"
+        rotation="0 135.99439746327653 90.00021045914971"
+        opacity="0.5"
+        material="alphaTest: 0.29"
+        geometry=""
+        id="mainContactsHeader"
+      ></a-box>
+      <!-- ws_storage -->
+      <a-box
+        color="lightskyblue"
+        position="0 1 5"
+        scale="8 4 0.05"
+        opacity="0.3"
+        material="shader: gradientshader; side: double; blending: additive; topColor: #11b6df; bottomColor: #1f4b87"
+        geometry=""
+        text__ws_landing="align: center; alphaTest: 1.43; color: #0ba9dd; height: 3.99; lineHeight: 1.51; side: double; transparent: false; value: Storage; width: 1.65"
+        id="ws_storage"
+        rotatation="0 180 0"
+        rotation="0 180 0"
+      >
+        <a-entity
+          value="Storage"
+          color="white"
+          scale="3 2 1"
+          opacity="0.8"
+        ></a-entity>
+      </a-box>
+      <a-box>
         <a-entity
           value="WideSpread"
           color="white"
