--- a/index.html
+++ b/index.html
@@ -152,32 +152,49 @@
         ></a-entity>
       </a-box>
 
-      <!-- mainContacts -->
+  <!-- mainContacts -->
+      <!-- mainContactsHeader -->
       <a-box
         color="black"
-        position="6.50052 1 -3.76483"
-        scale="4 2.01253 0.15"
-        rotation="0 135.99439746327653 90.00021045914971"
+        position="7.51969 3.28815 -4.76483"
+        scale="1 0.81253 0.15"
+        rotation="0 315 0"
+        opacity="0"
+        material="opacity: 0.49; alphaTest: 0.65; side: double; vertexColors: face; ambientOcclusionMapIntensity: -4.78; height: 180.98; metalness: 0.82; roughness: 0.4; width: 506.77"
+        geometry=""
+        id="mainContactsHeader"
+        text__maincontactsheadertext="align: center; color: #10d3f5; height: 3.99; opacity: 0.95; side: double; transparent: false; value: Contacts; width: 6.39"
+        visible=""
+      >
+      </a-box>
+      <a-box
+        color="black"
+        position="7.50052 1 -4.76483"
+        scale="2 4 0.15"
+        rotation="0 315 0.00021045914971"
         opacity="0.5"
         material="alphaTest: 0.29"
         geometry=""
         id="mainContacts"
-      ></a-box>
+      >
+      </a-box>
       <!-- mainContacts Header -->
       <a-box
         color="black"
-        position="6.50052 4 -3.76483"
+        position="7.50052 4 -4.76483"
         scale="1 2.01253 0.15"
         rotation="0 135.99439746327653 90.00021045914971"
         opacity="0.5"
         material="alphaTest: 0.29"
         geometry=""
         id="mainContactsHeader"
-      ></a-box>
+      >
+      </a-box>
+
       <!-- ws_storage -->
       <a-box
         color="lightskyblue"
-        position="0 0 5"
+        position="0 0 8"
         scale="8 4 0.05"
         opacity="0.3"
         material="shader: gradientshader; side: double; blending: additive; topColor: #11b6df; bottomColor: #1f4b87"
