--- a/index.html
+++ b/index.html
@@ -278,6 +278,16 @@
 
       <a-sky color="#222"></a-sky>
     </a-scene>
+        <div class="audio">
+      <iframe
+        width="100%"
+        height="300"
+        scrolling="no"
+        frameborder="no"
+        allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/697052167&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
+      ></iframe>
+    </div>
     <script src="./assets/js/charts/chart1.js"></script>
   </body>
 </html>
