added floor and construction cones

--- a/index.html
+++ b/index.html
@@ -274,7 +274,63 @@
         material="shader: gradientshader; topColor: #050505; bottomColor: #7d7d7d"
         geometry=""
       ></a-box>
-      <!-- Image Gallery -->
+         <!-- Floor -->
+      <a-box color="black" position="0 -2.9 0" scale="30 0.01 30"></a-box>
+      <!-- Construction Zone -->
+      <a-cone
+        color="tomato"
+        radius-bottom="0.3"
+        radius-top="0.1"
+        position="4.1771 -2 -6.36121"
+        material="color: #f06f20; alphaTest: 1; flatShading: true; shader: flat; blending: none"
+        geometry=""
+        scale="1 1.5 1"
+      ></a-cone>
+      <a-cone
+        color="tomato"
+        radius-bottom="0.3"
+        radius-top="0.1"
+        position="4.1771 -2 6.36121"
+        material="color: #f06f20; alphaTest: 1; flatShading: true; shader: flat; blending: none"
+        geometry=""
+        scale="1 1.5 1"
+      ></a-cone>
+      <a-cone
+        color="tomato"
+        radius-bottom="0.3"
+        radius-top="0.1"
+        position="-5.1771 -2 -6.36121"
+        material="color: #f06f20; alphaTest: 1; flatShading: true; shader: flat; blending: none"
+        geometry=""
+        scale="1 1.5 1"
+      ></a-cone>
+      <a-cone
+        color="tomato"
+        radius-bottom="0.3"
+        radius-top="0.1"
+        position="-5.1771 -2 6.36121"
+        material="color: #f06f20; alphaTest: 1; flatShading: true; shader: flat; blending: none"
+        geometry=""
+        scale="1 1.5 1"
+      ></a-cone>
+      <a-cone
+        color="tomato"
+        radius-bottom="0.3"
+        radius-top="0.1"
+        position="-11 -2 0.25"
+        material="color: #f06f20; alphaTest: 1; flatShading: true; shader: flat; blending: none"
+        geometry=""
+        scale="1 1.5 1"
+      ></a-cone>
+      <a-cone
+        color="tomato"
+        radius-bottom="0.3"
+        radius-top="0.1"
+        position="11 -2 0.25"
+        material="color: #f06f20; alphaTest: 1; flatShading: true; shader: flat; blending: none"
+        geometry=""
+        scale="1 1.5 1"
+      ></a-cone>
 
       <a-sky color="#222"></a-sky>
     </a-scene>
