Added Dashboard Anchor and SocialSpread Anchor

--- a/index.html
+++ b/index.html
@@ -19,6 +19,30 @@
        <a-assets>
         <img id="my-image" src="./assets/images/world%space_1a1c.png" />
       </a-assets>
+            <!-- SocialSpread -->
+      <a-box
+        color="blue"
+        position="2.5 0.8 -10"
+        scale="4 2.5 0.15"
+        opacity="0.8"
+        material="color: #96e3fa; shader: flat"
+        geometry=""
+        id="ws_socialSpread"
+        text__socialspread="align: center; baseline: top; color: #ffffff; height: 1.15; opacity: 0.87; side: double; transparent: false; value: SocialSpread; width: 2.73"
+      >
+      </a-box>
+      <!-- Dashboard -->
+      <a-box
+        color="blue"
+        position="-2.5 0.8 -10"
+        scale="4 2.5 0.15"
+        opacity="0.8"
+        material="color: #96e3fa; shader: flat"
+        geometry=""
+        id="ws_socialSpread"
+        text__socialspread="align: center; baseline: top; color: #ffffff; height: 1.15; opacity: 0.87; side: double; transparent: false; value: Dashboard; width: 2.73"
+      >
+      </a-box>
       <!-- Academy -->
       <a-curvedimage
         src="#my-image"
