--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         color="blue"
         position="2.5 0.8 -10"
         scale="4 2.5 0.15"
-        opacity="0.8"
+        opacity="0.4"
         material="color: #96e3fa; shader: flat"
         geometry=""
         id="ws_socialSpread"
@@ -36,7 +36,31 @@
         color="blue"
         position="-2.5 0.8 -10"
         scale="4 2.5 0.15"
+        opacity="0.4"
+        material="color: #96e3fa; shader: flat"
+        geometry=""
+        id="ws_socialSpread"
+        text__socialspread="align: center; baseline: top; color: #ffffff; height: 1.15; opacity: 0.87; side: double; transparent: false; value: Dashboard; width: 2.73"
+      >
+      </a-box>
+                 <!-- Window_1 -->
+      <a-box
+        color="blue"
+        position="-4.5 0.8 -12"
+        scale="4 2.5 0.15"
         opacity="0.8"
+        material="color: #96e3fa; shader: flat"
+        geometry=""
+        id="ws_socialSpread"
+        text__socialspread="align: center; baseline: top; color: #ffffff; height: 1.15; opacity: 0.87; side: double; transparent: false; value: SocialSpread; width: 2.73"
+      >
+      </a-box>
+      <!-- Window_2 -->
+      <a-box
+        color="blue"
+        position="4.5 0.8 -12"
+        scale="4 2.5 0.15"
+        opacity="0."
         material="color: #96e3fa; shader: flat"
         geometry=""
         id="ws_socialSpread"
