Updated window 1 and 2 titles

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         material="color: #96e3fa; shader: flat"
         geometry=""
         id="ws_socialSpread"
-        text__socialspread="align: center; baseline: top; color: #ffffff; height: 1.15; opacity: 0.87; side: double; transparent: false; value: SocialSpread; width: 2.73"
+        text__socialspread="align: center; baseline: top; color: #ffffff; height: 1.15; opacity: 0.87; side: double; transparent: false; value: Window 1; width: 2.73"
       >
       </a-box>
       <!-- Window_2 -->
@@ -64,7 +64,7 @@
         material="color: #96e3fa; shader: flat"
         geometry=""
         id="ws_socialSpread"
-        text__socialspread="align: center; baseline: top; color: #ffffff; height: 1.15; opacity: 0.87; side: double; transparent: false; value: Dashboard; width: 2.73"
+        text__socialspread="align: center; baseline: top; color: #ffffff; height: 1.15; opacity: 0.87; side: double; transparent: false; value: Window 2; width: 2.73"
       >
       </a-box>
       <!-- Academy -->
