--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
         ></a-entity>
       </a-curvedimage>
       <!-- Shopping -->
+      <a-entity position="-12.97662 3.82241 5.5898" scale="3.29263 3.33823 1" text__ws_leisure="align: center; alphaTest: 1.25; color: #3198ff; height: 3.44; side: double; transparent: false; value: Shopping; width: 3.04" rotation="0 135 0"></a-entity>
       <a-curvedimage
         src="#my-image"
         height="8.0"
