Added Business Header

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
         ></a-entity>
       </a-curvedimage>
       <!-- Business -->
+      <a-entity position="-12.80316 3.82241 -5.81471" scale="3.29263 3.33823 1" text__ws_leisure="align: center; alphaTest: 1.25; color: #c4e1ff; height: 3.44; side: double; transparent: false; value: Business; width: 3.04" rotation="0 45 0"></a-entity>
       <a-curvedimage
         src="#my-image"
         height="8.0"
