--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         height="8.0"
         position="4.8 1 -0.2"
         radius="10"
+        opacity="0.4"
         theta-length="82"
         rotation="0 90 0"
         scale="0.8 0.8 0.8"
