Changed opacity to Leisure, Shopping and Business

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         height="8.0"
         position="4.8 1 0.2"
         radius="10"
+        opacity="0.4"
         theta-length="82"
         rotation="0 0 0"
         scale="0.8 0.8 0.8"
@@ -118,6 +119,7 @@
         height="8.0"
         position="-7.2 1 -0.2"
         radius="10"
+        opacity="0.4"
         theta-length="82"
         rotation="0 180 0"
         scale="0.8 0.8 0.8"
@@ -136,6 +138,7 @@
         height="8.0"
         position="-7.2 1 0.2"
         radius="10"
+        opacity="0.4"
         theta-length="82"
         rotation="0 270 0"
         scale="0.8 0.8 0.8"
