--- a/index.html
+++ b/index.html
@@ -318,6 +318,8 @@
         material="shader: gradientshader; topColor: #050505; bottomColor: #7d7d7d"
         geometry=""
       ></a-box>
+      <a-entity geometry="" rotation="" scale="0.15 10 10" position="4.92149 2.5 13.22132" material="color: #000000"></a-entity>
+      <a-entity geometry="" rotation="" scale="0.15 10 10" position="-4.92149 2.5 13.22132" material="color: #000000"></a-entity>
          <!-- Floor -->
       <a-box color="black" position="0 -2.9 0" scale="60 0.01 60"></a-box>
       <!-- Construction Zone -->
