--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
       <a-entity geometry="" rotation="" scale="0.15 10 10" position="5.94565 2.5 -13.08856" material="color: #000000"></a-entity>
       <a-entity geometry="" rotation="" scale="0.15 10 10" position="-6.94565 2.5 -13.08856" material="color: #000000"></a-entity>
          <!-- Floor -->
-      <a-box color="black" position="0 -2.9 0" scale="60 0.01 60"></a-box>
+      <a-box shader="flat" color="black" position="0 -2.9 0" scale="60 0.01 60"></a-box>
       <!-- Construction Zone -->
       <a-cone
         color="tomato"
