Added leisure floor

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
       <!-- Splitter Post Left -->
       <a-box color="black" scale="1 10 2" position="-15.5 2 -0.5"></a-box>
       <!-- Leisure -->
+      <a-entity geometry="depth: 2; height: 0.05; width: 0.8" material="flatShading: true; shader: msdf; blending: none; color: #988b6d"  id="leisure_floor"></a-entity>
       <a-entity position="11.1687 3.82241 4.85155" scale="3.29263 3.33823 1" text__ws_leisure="align: center; alphaTest: 1.25; color: #42b935; height: 3.44; side: double; transparent: false; value: Leisure; width: 3.04" rotation="0 235 0"></a-entity>
       <a-curvedimage
         src="#my-image"
