--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <!-- FlexFloor -->
       <a-entity position="-13.98198 -2.89543 -0.96781" scale="13.48082 11.53418 2.97" text__ws_leisure="align: center; alphaTest: 1.25; color: #f39118; height: 3.44; side: double; transparent: false; value: FlexFloor; width: 3.04" rotation="270 90 0"></a-entity>
       <!-- Academy -->
-      <a-entity geometry="height: 0.05; depth: 2; width: 9.9" material="color: #2073a4; flatShading: true; blending: none; shader: msdf" id="academy_floor"></a-entity>
+      <a-entity geometry="height: 0.05; depth: 2; width: 9.9" material="color: #2073a4; flatShading: true; blending: none; shader: msdf" id="academy_floor" position="14 0 0"></a-entity>
       <a-entity position="9.58821 3.82241 -6.47627" scale="3.29263 3.33823 1" text__ws_academy="align: center; alphaTest: 1.25; color: #e9ee1c; height: 3.44; side: double; transparent: false; value: Academy; width: 3.04" rotation="0 -36.9855715912849 0"></a-entity>
       <a-curvedimage
         src="#my-image"
