Added Academy/Leisure divider wall

--- a/index.html
+++ b/index.html
@@ -374,7 +374,8 @@
       <!-- Spread Left/Right Walls -->
       <a-entity geometry="" rotation="" scale="0.15 10 10" position="5.94565 2.5 -13.08856" material="color: #000000"></a-entity>
       <a-entity geometry="" rotation="" scale="0.15 10 10" position="-6.94565 2.5 -13.08856" material="color: #000000"></a-entity>
-      <a-entity id="left_divider_wall" geometry="" material="flatShading: true; color: #000000"></a-entity>
+      <a-entity id="left_divider_wall" geometry="" material="flatShading: true; color: #000000" position="-14 0 0"></a-entity>
+      <a-entity id="right_wall" geometry="" material="flatShading: true; color: #000000" position="21 0 0"></a-entity>
          <!-- Floor -->
       <a-box shader="flat" color="black" position="0 -2.9 0" scale="60 0.01 60"></a-box>
       <!-- Construction Zone -->
