Added Business Light -16 6 -5.8

--- a/index.html
+++ b/index.html
@@ -169,7 +169,15 @@
           opacity="0.8"
         ></a-entity>
       </a-curvedimage>
-      
+  
+  <!-- Business Lights -->
+      <a-entity
+        geometry="primitive: sphere; radius: 0.25"
+        light="type: point; color: white; intensity: 8"
+        material="color: lightskyblue; shader: flat; src: glow.jpg"
+        position="-16 6 -5.8"
+        opacity="0.1"
+      ></a-entity>    
   <!-- Home Lights -->
       <a-entity
         geometry="primitive: sphere; radius: 0.25"
