made ceiling black

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
       ></a-box>
 
       <a-box
-        color="white"
+        color="black"
         position="0 10 0"
         scale="60 0.1 60"
         rotation="0 0 0"
