--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@
         scale="60 0.1 60"
         rotation="0 0 0"
         opacity="1"
+        material="color: #000000; shader:flat"
       ></a-box>
       <!-- Core -->
 
