--- a/index.html
+++ b/index.html
@@ -267,18 +267,7 @@
 
   <!-- mainContacts -->
       <!-- mainContactsHeader -->
-      <a-box
-        color="black"
-        position="4.51969 3.28815 0"
-        scale="1 0.81253 0.15"
-        rotation="0 270 0"
-        opacity="0"
-        material="opacity: 0.49; alphaTest: 0.65; side: double; vertexColors: face; ambientOcclusionMapIntensity: -4.78; height: 180.98; metalness: 0.82; roughness: 0.4; width: 506.77"
-        geometry=""
-        id="mainContactsHeader"
-        text__maincontactsheadertext="align: center; color: #10d3f5; height: 3.99; opacity: 0.95; side: double; transparent: false; value: Contacts; width: 6.39"
-        visible=""
-      >
+<a-box color="black" position="4.79349 1.82897 -8.07434" scale="1 0.81253 0.14147" rotation="" opacity="0" material="opacity: 0.49; alphaTest: 0.65; side: double; vertexColors: face; ambientOcclusionMapIntensity: -4.78; height: 180.98; metalness: 0.82; roughness: 0.4; width: 506.77" geometry="" id="mainContactsHeader" text__maincontactsheadertext="align: center; color: #10d3f5; height: 3.99; opacity: 0.95; side: double; transparent: false; value: Contacts; width: 6.39" visible="">
       </a-box>
       <a-box
         color="black"
