--- a/index.html
+++ b/index.html
@@ -273,13 +273,13 @@
 <a-box color="black" position="4.84163 -0.24252 -8.13382" scale="1.73499 3.55548 0.15" rotation="" opacity="0.5" material="alphaTest: 0.29" geometry="" id="mainContacts">
       </a-box>
       <!-- contact1 -->
-<a-box color="black" position="4.79349 1.42897 -8.07434" scale="1 0.81253 0.14147" rotation="" opacity="0" material="opacity: 0.49; alphaTest: 0.65; side: double; vertexColors: face; ambientOcclusionMapIntensity: -4.78; height: 180.98; metalness: 0.82; roughness: 0.4; width: 506.77" geometry="" id="mainContactsHeader" text__maincontactsheadertext="align: center; color: #10d3f5; height: 2.99; opacity: 0.95; side: double; transparent: false; value: Jonny O.; width: 6.39" visible="">
+<a-box color="black" position="4.79349 1.2897 -8.07434" scale="1 0.81253 0.14147" rotation="" opacity="0" material="opacity: 0.49; alphaTest: 0.65; side: double; vertexColors: face; ambientOcclusionMapIntensity: -4.78; height: 180.98; metalness: 0.82; roughness: 0.4; width: 506.77" geometry="" id="mainContactsHeader" text__maincontactsheadertext="align: center; color: #10d3f5; height: 2.99; opacity: 0.95; side: double; transparent: false; value: Jonny O.; width: 6.39" visible="">
       </a-box>
             <!-- contact2 -->
-<a-box color="black" position="4.79349 1.2897 -8.07434" scale="1 0.81253 0.14147" rotation="" opacity="0" material="opacity: 0.49; alphaTest: 0.65; side: double; vertexColors: face; ambientOcclusionMapIntensity: -4.78; height: 180.98; metalness: 0.82; roughness: 0.4; width: 506.77" geometry="" id="mainContactsHeader" text__maincontactsheadertext="align: center; color: #10d3f5; height: 2.99; opacity: 0.95; side: double; transparent: false; value: Mark Techson; width: 6.39" visible="">
+<a-box color="black" position="4.79349 0.8897 -8.07434" scale="1 0.81253 0.14147" rotation="" opacity="0" material="opacity: 0.49; alphaTest: 0.65; side: double; vertexColors: face; ambientOcclusionMapIntensity: -4.78; height: 180.98; metalness: 0.82; roughness: 0.4; width: 506.77" geometry="" id="mainContactsHeader" text__maincontactsheadertext="align: center; color: #10d3f5; height: 2.99; opacity: 0.95; side: double; transparent: false; value: Techson; width: 6.39" visible="">
       </a-box>
                   <!-- contact3 -->
-<a-box color="black" position="4.79349 1.0897 -8.07434" scale="1 0.81253 0.14147" rotation="" opacity="0" material="opacity: 0.49; alphaTest: 0.65; side: double; vertexColors: face; ambientOcclusionMapIntensity: -4.78; height: 180.98; metalness: 0.82; roughness: 0.4; width: 506.77" geometry="" id="mainContactsHeader" text__maincontactsheadertext="align: center; color: #10d3f5; height: 2.99; opacity: 0.95; side: double; transparent: false; value: Bill Gates; width: 6.39" visible="">
+<a-box color="black" position="4.79349 0.4897 -8.07434" scale="1 0.81253 0.14147" rotation="" opacity="0" material="opacity: 0.49; alphaTest: 0.65; side: double; vertexColors: face; ambientOcclusionMapIntensity: -4.78; height: 180.98; metalness: 0.82; roughness: 0.4; width: 506.77" geometry="" id="mainContactsHeader" text__maincontactsheadertext="align: center; color: #10d3f5; height: 2.99; opacity: 0.95; side: double; transparent: false; value: Billy G.; width: 6.39" visible="">
       </a-box>
       <!-- ws_storage -->
       <a-box
