--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       <!-- Academy -->
      
       <a-entity position="9.58821 3.82241 -6.47627" scale="3.29263 3.33823 1" text__ws_academy="align: center; alphaTest: 1.25; color: #e9ee1c; height: 3.44; side: double; transparent: false; value: Academy; width: 3.04" rotation="0 -36.9855715912849 0"></a-entity>
+     <a-entity id="academy_screen1" geometry="" material="alphaTest: 0.8; flatShading: true; shader: flat; color: #444" position="18.753 1.137 -3.571"></a-entity>
       <a-curvedimage
         src="#my-image"
         height="8.0"
