--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
           opacity="0.8"
         ></a-entity>
       </a-curvedimage>
+      
+      <a-entity id="golfGreen_1a1" geometry="" scale="22.25416 0.1 27.1573" position="16.05693 -2.93 14.82092" material="alphaTest: 0.8; flatShading: true; shader: flat; color: #32CD32"></a-entity>
       <!-- Business -->
       <a-entity position="-12.80316 3.82241 -5.81471" scale="3.29263 3.33823 1" text__ws_leisure="align: center; alphaTest: 1.25; color: #c4e1ff; height: 3.44; side: double; transparent: false; value: Business; width: 3.04" rotation="0 45 0"></a-entity>
       <a-curvedimage
