added books to academy_shelf1

--- a/index.html
+++ b/index.html
@@ -75,7 +75,18 @@
       <!-- FlexFloor -->
       <a-entity position="-13.98198 -2.89543 -0.96781" scale="13.48082 11.53418 2.97" text__ws_leisure="align: center; alphaTest: 1.25; color: #f39118; height: 3.44; side: double; transparent: false; value: FlexFloor; width: 3.04" rotation="270 90 0"></a-entity>
       <!-- Academy -->
-     
+     <!-- Books -->
+      <!-- Eloquent Javascript -->
+      <a-entity geometry="" position="17 -0.06806 -2" material="alphaTest: 1; flatShading: true; shader: flat; side: double; color: #FFBF00;" id="book_eloquent+javascript"></a-entity>
+      <!-- Learning React -->
+       <a-entity geometry="" position="17 -0.08806 -2" material="alphaTest: 1; flatShading: true; shader: flat; side: double; color: #008055;" id="book_learning+react"></a-entity>
+      <!-- Tensor Calculus -->
+       <a-entity geometry="" position="17 -0.02806 -2" material="alphaTest: 1; flatShading: true; shader: flat; side: double; color: #19FFFF;" id="book_tensor+calculus"></a-entity>
+      <!-- Book -->
+      <!-- Book -->
+      <!-- Book -->
+      <!-- Book -->
+      <!-- Book -->
       <a-entity position="9.58821 3.82241 -6.47627" scale="3.29263 3.33823 1" text__ws_academy="align: center; alphaTest: 1.25; color: #e9ee1c; height: 3.44; side: double; transparent: false; value: Academy; width: 3.04" rotation="0 -36.9855715912849 0"></a-entity>
      <a-entity id="academy_screen1" geometry="" material="alphaTest: 0.8; flatShading: true; shader: flat; color: #444" position="18.753 1.137 -3.571" scale="4 3 0.25" rotation="0 90 0"></a-entity>
       <a-curvedimage
