Added 2D DOM Element capabilities

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- aframe -->
     <script src="https://aframe.io/releases/1.0.3/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-environment-component/dist/aframe-environment-component.min.js"></script>
+    <script src="https://supereggbert.github.io/aframe-htmlembed-component/dist/build.js"></script>
 
     <title>WideSpread</title>
   </head>
@@ -20,6 +21,12 @@
         <img id="my-image" src="./assets/images/world%space_1a1c.png" />
       </a-assets>
             <!-- SocialSpread -->
+      <a-entity
+        position="0 1.6 -1" htmlembed>
+        <h1>SocialSpread</h1>
+        <h3>Facebook</h3>
+	          	<p>Feb 1, 2020</p>
+	</a-entity>
       <a-box
         color="blue"
         position="2.5 0.8 -10"
