moved socialspread data

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       </a-assets>
             <!-- SocialSpread -->
       <a-entity
-        position="2.5 0.8 -10" htmlembed>
-        <h1>SocialSpread</h1>
+        position="2 1.2 -10" htmlembed>
+        <h1 color="#fff" size="48px">SocialSpread</h1>
         <h3>Facebook</h3>
 	          	<p>Feb 1, 2020</p>
 	</a-entity>
