Updated SocialSpread data

--- a/index.html
+++ b/index.html
@@ -22,10 +22,25 @@
       </a-assets>
             <!-- SocialSpread -->
       <a-entity
-        position="2 1.2 -10" htmlembed>
+        position="1.6 1.6 -10" htmlembed>
         <h1 color="#fff" size="48px">SocialSpread</h1>
-        <h3>Facebook</h3>
-	          	<p>Feb 1, 2020</p>
+	      <h3>Google</h3>
+	      <p>Gmail</p>
+	      <p>Drive</p>
+	      <p>Calandar</p>
+	      <p>Maps</p>
+        <h3>Feb 1, 2020</h3>
+	          	<p>Facebook</p>
+	      <p>Instagram</p>
+	      <p>LinkedIn</p>
+	      <p>Snapchat</p>
+	      <p>YouTube</p>
+	       <h3>Feb 2, 2020</h3>
+	      	          	<p>Facebook</p>
+	      <p>Instagram</p>
+	      <p>LinkedIn</p>
+	      <p>Snapchat</p>
+	      <p>YouTube</p>
 	</a-entity>
       <a-box
         color="blue"
