--- a/index.html
+++ b/index.html
@@ -72,18 +72,7 @@
       >
       </a-box>
       <!-- Window_2 -->
-      <a-box
-        color="blue"
-        position="4.5 0.8 -12"
-        scale="4 2.5 0.15"
-        opacity="0."
-        material="color: #96e3fa; shader: flat"
-        geometry=""
-        id="ws_socialSpread"
-        text__socialspread="align: center; baseline: top; color: #ffffff; height: 1.15; opacity: 0.87; side: double; transparent: false; value: Window 2; width: 2.73"
-      >
-      </a-box>
-      
+<a-entity id="ws_window_4" geometry="" position="4.5474 1.83911 -13.25115" material="shader: skyshader; side: double; color: #447dd2; luminance: 1.08; turbidity: 1.95; reileigh: 0.39; sunPosition: -26.83 3.41 -13.91" rotation="0 -35 0"></a-entity>      
       <!-- Right SpreadPad -->
       <a-entity geometry="primitive: cylinder; segmentsRadial: 400; thetaStart: 16.23" material="alphaTest: 1; flatShading: true; shader: flat; side: double; color: #393939; wireframeLinewidth: 18.97" position="3.97622 -3.30335 0" scale="9.1049 0.95 8.57117" id="right_spreadPad" position="-4.5 0 -10"></a-entity>
       <!-- Left SpreadPad -->
