--- a/index.html
+++ b/index.html
@@ -18,8 +18,14 @@
       inspector="url: https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js"
     >
        <a-assets>
-        <img id="my-image" src="./assets/images/world%space_1a1c.png" />
+        <img id="my-image" src="./assets/jonnyo_1a.jpg" />
       </a-assets>
+	    <!-- Jonny O Test -->
+	      <a-entity htmlembed position="0 0 -5">
+    <h1>An Example</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <img src="myImages.png" alt="image">
+  </a-entity>
             <!-- SocialSpread -->
       <a-entity
         position="1.2 1.3 -10" htmlembed>
