Fixed Jonny O test image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	      <a-entity htmlembed position="0 0 -5">
     <h1>An Example</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    <img src="myImages.png" alt="image">
+    <img src="#my-image" alt="Jonny O">
   </a-entity>
             <!-- SocialSpread -->
       <a-entity
