--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
       <a-entity geometry="" rotation="" scale="0.15 10 10" position="4.92149 2.5 13.22132" material="color: #000000"></a-entity>
       <a-entity geometry="" rotation="" scale="0.15 10 10" position="-6.5 2.5 13.22132" material="color: #000000"></a-entity>
       <!-- Spread Left/Right Walls -->
-      <a-entity geometry="" rotation="" scale="0.15 10 10" position="5.94565 2.5 -13.08856" material="color: #000000"></a-entity>
+      <a-entity geometry="" rotation="0 -45 0" scale="0.15 10 10" position="9.45 2.5 -11.671" material="color: #000000"></a-entity>
       <a-entity geometry="" rotation="" scale="0.15 10 10" position="-9.2 2.5 -13.08856" material="color: #000000"></a-entity>
       <a-entity id="left_divider_wall" geometry="" material="flatShading: true; color: #000000" position="-23 0 0" scale="16 11 0.1"></a-entity>
       <a-entity id="right_wall" geometry="" material="flatShading: true; color: #000000" position="21 0 0" scale="16 11 0.1"></a-entity>
