--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       inspector="url: https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js"
     >
        <a-assets>
-        <img id="my-image" src="./assets/jonnyo_1a.jpg" />
+        <img id="my-image" src="assets/jonnyo_1a.jpg" />
       </a-assets>
-
+<a-curvedimage src="assets/jonnyo_1a.jpg"></a-curvedimage>
             <!-- SocialSpread -->
       <a-entity
         position="1.2 1.3 -10" htmlembed>
