--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 	    <a-entity id="ws_window_3" geometry="" position="-4.68581 1.83911 -13.25115" material="shader: skyshader; side: double; color: #447dd2; luminance: 1.08; turbidity: 1.95; reileigh: 0.39; sunPosition: -26.83 3.41 -13.91" rotation="0 35 0"></a-entity>
 	     <!-- Window_4 -->
 	    	 <!-- FIND IN CODE - PLACE HERE -->
-	    
-	    
+	    <!-- Back Spread Wall -->
+	    <a-entity position="-1.021 -0.307 -15.266" geometry="" scale="3 2 0.1" rotation="0 45 0" material="flatShading: true;"></a-entity>
 	    <!-- Right SpreadPad -->
       <a-entity geometry="primitive: cylinder; segmentsRadial: 400; thetaStart: 16.23" material="alphaTest: 1; flatShading: true; shader: flat; side: double; color: #393939; wireframeLinewidth: 18.97" position="3.97622 -3.30335 0" scale="9.1049 0.95 8.57117" id="right_spreadPad" position="-4.5 0 -10"></a-entity>
       <!-- Left SpreadPad -->
