--- a/index.html
+++ b/index.html
@@ -14,13 +14,20 @@
     <title>WideSpread</title>
   </head>
   <body>
+    <div id="top_menu">
+      <h1>WideSpread</h1>
+    </div>
+    <div id="bottom_menu">
+      <h1>Notifications</h1>
+    </div>
     <a-scene
       inspector="url: https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js"
     >
-       <a-assets>
-        <img id="my-image" src="assets/jonnyo_1a.jpg" />
+      <a-assets>
+        <img id="my-image" src="./frontend/images/spread3h.png" />
       </a-assets>
-<a-curvedimage src="assets/jonnyo_1a.jpg"></a-curvedimage>
+
+      <a-image src="#my-image"></a-image>
             <!-- SocialSpread -->
       <a-entity
         position="1.2 1.3 -10" htmlembed>
