--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- Style -->
     <link rel="stylesheet" href="./assets/style/style1.css" />
+	      <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Michroma|Montserrat+Alternates&display=swap"
+      rel="stylesheet"
+    />
     <!-- aframe -->
     <script src="https://aframe.io/releases/1.0.3/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-environment-component/dist/aframe-environment-component.min.js"></script>
