updated overlay html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,30 @@
   </head>
   <body>
     <div id="top_menu">
-      <h1>WideSpread</h1>
+            <div class="top-menu-container">
+        <div class="top-menu-credentials">
+          <div class="logo">
+            <h1>WideSpread</h1>
+          </div>
+        </div>
+        <div class="top-menu-nav">
+          <ul>
+            <li>
+              <a href="./index.html">Home</a>
+            </li>
+            <li>
+              <a href="./messaging.html">Messages</a>
+            </li>
+
+            <li>
+              <a href="./mobile-spread">AR</a>
+            </li>
+            <li>
+              <a href="./search">Search</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
     <div id="bottom_menu">
       <h1>Notifications</h1>
