updated my-image path in a-assets img

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       inspector="url: https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js"
     >
       <a-assets>
-        <img id="my-image" src="./frontend/images/spread3h.png" />
+        <img id="my-image" src="./assets/spread3h.png" />
       </a-assets>
 
       <a-image src="#my-image"></a-image>
