added profile picture

--- a/index.html
+++ b/index.html
@@ -53,9 +53,16 @@
     >
       <a-assets>
         <img id="my-image" src="./assets/spread3h.png" />
+        <img id="jonny-o_1a1a" src="./frontend/images/jonnyo1a.jpg" />
       </a-assets>
 
       <a-image src="#my-image"></a-image>
+	    
+	      <a-image
+        src="#jonny-o_1a1a"
+        position="-0 1 -14"
+        scale="2 2.5 1"
+      ></a-image>
             <!-- SocialSpread -->
       <a-entity
         position="1.2 1.3 -10" htmlembed>
