updated image file path

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <a-image src="#my-image"></a-image>
 	    
 	      <a-image
-        src="#jonny-o_1a1a"
+        src="#jonny-o_1a"
         position="-0 1 -14"
         scale="2 2.5 1"
       ></a-image>
