--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     >
       <a-assets>
         <img id="my-image" src="./assets/spread3h.png" />
-        <img id="jonny-o_1a1a" src="./frontend/images/jonnyo1a.jpg" />
+        <img id="jonny-o_1a" src="./frontend/images/jonnyo1a.jpg" />
       </a-assets>
 
       <a-image src="#my-image"></a-image>
