--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       <h1>Notifications</h1>
     </div>
     <a-scene
+	     loading-screen="dotsColor: lightskyblue; backgroundColor: black
       inspector="url: https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js"
     >
       <a-assets>
