Updated AR Top Menu Link (path)

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </li>
 
             <li>
-              <a href="./mobile-spread">AR</a>
+              <a href="./ar-spread.html">AR</a>
             </li>
             <li>
               <a href="./search">Search</a>
