--- a/ar-spread.html
+++ b/ar-spread.html
@@ -13,6 +13,9 @@
     />
 
     <!-- jQuery -->
+
+
+   
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
@@ -21,10 +24,12 @@
     <!-- aframe -->
     <script src="https://aframe.io/releases/1.0.3/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-environment-component/dist/aframe-environment-component.min.js"></script>
+
+    <!-- aFrame - html-embed  -->
     <script src="https://supereggbert.github.io/aframe-htmlembed-component/dist/build.js"></script>
     <!-- ARjs -->
     <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
-    <!-- aframe html-shader -->
+    <!-- aFrame html-shader -->
     <script src="https://unpkg.com/aframe-html-shader@0.5.0/dist/aframe-html-shader.min.js"></script>
 
     <title>WideSpread</title>
@@ -68,6 +73,7 @@
 
             
 
+    <!--  AR START -->
 
     <a-scene
         vr-mode-ui="enabled: false" embedded
@@ -127,6 +133,9 @@
       </a-curvedimage>
       <!-- WideSpread Matrix -->
     </a-scene>
+
+
+    <!-- AR END  -->
 
     <!-- Background Audio -->
 
