Changend search link to index temporarily

--- a/ar-spread.html
+++ b/ar-spread.html
@@ -55,7 +55,7 @@
             </li>
             <!-- Search -->
             <li>
-              <a href="./search">Search</a>
+              <a href="./index.html">Search</a>
             </li>
           </ul>
         </div>
@@ -64,7 +64,7 @@
 
 
     <div id="bottom_menu">
-      <h1>Notifications ||</h1>
+      <h1>WideSpread</h1>
     </div>
 
     <!-- WideSpread Menu END -->
