--- a/ar-spread.html
+++ b/ar-spread.html
@@ -76,7 +76,7 @@
     <!--  AR START -->
 
     <a-scene
-        vr-mode-ui="enabled: false" embedded
+        vr-mode-ui="enabled: true" embedded
         arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 2900; displayHeight: 1400; debugUIEnabled: false;'
       inspector="url: https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js"
     >
