removed 3d objects in ar-spread (blocked the view)

--- a/ar-spread.html
+++ b/ar-spread.html
@@ -82,55 +82,13 @@
     >
       <!-- WideSpread Matrix -->
 
+      
     <a-camera gps-camera rotation-reader>
         </a-camera>
+<!-- Businesses Appear Below -->
 
 
-      <a-entity>
-        <a-box
-          material="color: rgba(37, 77, 163, 0.466)"
-          opacity="0.4"
-          scale="10 5 1"
-          position="0 1 -8"
-        ></a-box>
-      </a-entity>
-      <!-- Right Screen VR DATA -->
-      <a-curvedimage
-        src="#my-image"
-        height="8.0"
-        position="4.8 1 -0.2"
-        radius="10"
-        opacity="0.4"
-        theta-length="82"
-        rotation="0 90 0"
-        scale="0.8 0.8 0.8"
-      >
-        <a-entity
-          value="Academy"
-          color="white"
-          scale="3 2 1"
-          opacity="0.8"
-        ></a-entity>
-      </a-curvedimage>
 
-      <!-- Left Screen VR DATA -->
-      <a-curvedimage
-        src=""
-        height="8.0"
-        position="-7.2 1 -0.2"
-        radius="10"
-        opacity="0.4"
-        theta-length="82"
-        rotation="0 180 0"
-        scale="0.8 0.8 0.8"
-      >
-        <a-entity
-          value="Academy"
-          color="white"
-          scale="3 2 1"
-          opacity="0.8"
-        ></a-entity>
-      </a-curvedimage>
       <!-- WideSpread Matrix -->
     </a-scene>
 
