Updated camera and screen resolutions

--- a/ar-spread.html
+++ b/ar-spread.html
@@ -75,9 +75,21 @@
 
     <!--  AR START -->
 
+<!--  CELL PHONE SIZES START -->
+
+
+<!--  
+
+3840x2160 (4K UHD) (60 fps), 1920x1080 (Full HD) (240 fps), 1280x720 (HD) (960 fps)
+
+-->
+
+
+<!--  CELL PHONE SIZES END -->
+
     <a-scene
         vr-mode-ui="enabled: true" embedded
-        arjs='sourceType: webcam; sourceWidth:2900; sourceHeight:1400; displayWidth: 2900; displayHeight: 1400; debugUIEnabled: false;'
+        arjs='sourceType: webcam; sourceWidth:3840; sourceHeight:2160; displayWidth: 3840; displayHeight: 2160; debugUIEnabled: false;'
       inspector="url: https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js"
     >
       <!-- WideSpread Matrix -->
