--- a/ar-spread.html
+++ b/ar-spread.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- Style -->
     <link rel="stylesheet" href="./frontend/overlay-style.css" />
+        <link rel="stylesheet" href="./assets/style/style1.css" />
     <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Michroma|Montserrat+Alternates&display=swap"
