--- a/ar-spread.html
+++ b/ar-spread.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- Style -->
-   <!-- <link rel="stylesheet" href="./frontend/overlay-style.css" /> --> //Not used yet.
+   <!-- <link rel="stylesheet" href="./frontend/overlay-style.css" /> -->
         <link rel="stylesheet" href="./assets/style/style1.css" />
     <!-- Google Fonts -->
     <link
