Changed screen size

--- a/ar-spread.html
+++ b/ar-spread.html
@@ -82,6 +82,7 @@
 <!--  
 
 3840x2160 (4K UHD) (60 fps), 1920x1080 (Full HD) (240 fps), 1280x720 (HD) (960 fps)
+Note 10+ - 2930x1440
 
 -->
 
@@ -90,7 +91,7 @@
 
     <a-scene
         vr-mode-ui="enabled: true" embedded
-        arjs='sourceType: webcam; sourceWidth:3840; sourceHeight:2160; displayWidth: 1920; displayHeight: 1080; debugUIEnabled: false;'
+        arjs='sourceType: webcam; sourceWidth:3840; sourceHeight:2160; displayWidth: 2930; displayHeight: 1440; debugUIEnabled: false;'
       inspector="url: https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js"
     >
       <!-- WideSpread Matrix -->
