updated nav menu

--- a/ar-spread.html
+++ b/ar-spread.html
@@ -54,6 +54,8 @@
             <li>
               <a href="./ar-spread.html">AR</a>
             </li>
+            <!-- SpreadShield -->
+            <li><a href="./spreadshield-center.html">SpreadShield</a></li>
             <!-- Search -->
             <li>
               <a href="./index.html">Search</a>
