--- a/index.html
+++ b/index.html
@@ -28,16 +28,17 @@
         </div>
         <div class="top-menu-nav">
           <ul>
+            <!-- Landing Page -->
             <li>
               <a href="./index.html">Home</a>
             </li>
-            <li>
-              <a href="./messaging.html">Messages</a>
-            </li>
-
+            <!-- AR-Spread -->
             <li>
               <a href="./ar-spread.html">AR</a>
             </li>
+            <!-- SpreadShield -->
+            <li><a href="./spreadshield-center.html">SpreadShield</a></li>
+            <!-- Search -->
             <li>
               <a href="./search">Search</a>
             </li>
