added left rearview with object recognition highlighting

--- a/spreadshield-center.html
+++ b/spreadshield-center.html
@@ -66,6 +66,9 @@
       </div>
     </div>
 
+    <div id="left-mirror"><iframe src="./mirrors/left-mirror.html" frameborder="0"></iframe></div>
+    <div id="right-mirror"><iframe src="./mirrors/right-mirror.html" frameborder="0"></iframe></div>
+    <div id="center-mirror"><iframe src="./mirrors/center-mirror.html" frameborder="0"></iframe></div>
 
     <div id="bottom_menu">
       <h1>WideSpread</h1>
