--- a/index.html
+++ b/index.html
@@ -512,6 +512,7 @@
       <a-entity id="camRig" position="0 0 0">
         <!-- CAMERA -->
         <a-camera id="cam" wasd-controls-enabled="false">
+          <a-cursor color="	#00ffff" opacity="1"></a-cursor>
         </a-camera>
       </a-entity>
     </a-scene>
