--- a/index.html
+++ b/index.html
@@ -355,6 +355,9 @@
       </a-box>
 
   <!-- mainContacts -->
+  <a-plane position="4 2 -6" color="purple" material="height: 225.26; metalness: 1; opacity: 0" geometry="primitive: ring">
+    <a-link href="tel:3524468043" title="SpreadShield" titlecolor="blue" position="0 0 1" scale="0.1 0.1 0.1" background="" geometry="primitive: circle; segments: 64" material="shader: portal; side: double" link="" visible=""><a-entity text="" position="" rotation="" scale=""></a-entity><a-entity geometry="" material="" rotation="" position="" visible="" scale=""></a-entity><a-entity geometry="" material="" visible="" scale=""></a-entity><a-entity text="color: white; align: center; font: kelsonsans; value: Jonny O; width: 4" position="0 -5 0" scale="6 6 6"></a-entity><a-entity geometry="primitive: sphere; segmentsWidth: 64; segmentsHeight: 64; phiLength: 180; thetaLength: 360" material="shader: flat; borderEnabled: 0; side: back" rotation="0 180 0" position="" visible="true" scale="4 4 4" color="blue"></a-entity><a-entity geometry="primitive: sphere; radius: 10; segmentsWidth: 64; segmentsHeight: 64" material="shader: portal; borderEnabled: 0; side: back" visible="false"></a-entity></a-link>
+</a-plane>
       <!-- mainContactsHeader -->
 <a-box color="black" position="4.79349 1.82897 -8.07434" scale="1 0.81253 0.14147" rotation="" opacity="0" material="opacity: 0.49; alphaTest: 0.65; side: double; vertexColors: face; ambientOcclusionMapIntensity: -4.78; height: 180.98; metalness: 0.82; roughness: 0.4; width: 506.77" geometry="" id="mainContactsHeader" text__maincontactsheadertext="align: center; color: #10d3f5; height: 3.99; opacity: 0.95; side: double; transparent: false; value: Contacts; width: 6.39" visible="">
       </a-box>
