added relaxation page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a href="./ar-spread.html">AR</a>
             </li>
             <!-- SpreadShield -->
-            <li><a href="./spreadshield-center.html">SpreadShield</a></li>
+            <li><a href="./relax.html">Relax</a></li>
             
           </ul>
         </div>
