--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <img id="my-image" src="./assets/spread3h.png" />
         <img id="jonny-o_1a" src="./frontend/images/jonnyo1a.jpg" />
       </a-assets>
-
+      <a-link title="Link" scale="2 2 2" position="0 2 -2"></a-link>
       <a-image src="#my-image"></a-image>
 	    
 	      <a-image
