added ar golf with test

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
               <a href="./ar-spread.html">AR</a>
             </li>
             <!-- SpreadShield -->
-            <li><a href="./relax.html">Relax</a></li>
+            <li><a href="./spreadgolf.html">Golf</a></li>
+            <!-- <li><a href="./relax.html">Relax</a></li> -->
             
           </ul>
         </div>
@@ -55,7 +56,6 @@
         <img id="my-image" src="./assets/spread3h.png" />
         <img id="jonny-o_1a" src="./frontend/images/jonnyo1a.jpg" />
       </a-assets>
-      <a-link title="Link" scale="2 2 2" position="0 2 -2"></a-link>
       <a-image src="#my-image"></a-image>
 	    
 	      <a-image
